--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^5.17.0",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "firebase": "^10.11.1",
@@ -22,7 +23,8 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^6.8.0",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5"
